--- a/CSS/dadoscolaborador.css
+++ b/CSS/dadoscolaborador.css
@@ -178,4 +178,65 @@ a.sidebar-link:hover {
 }
 
 
-@media (min-width: 768px) {}
+
+.boxFullElements {
+    display: flex;
+    width: 100%;
+    height: 8%;
+    justify-content: space-between;
+}
+
+.boxContainer {
+    position: relative;
+    width: 300px;
+    height: 42px;
+    border: 4px solid #0e2238;
+    padding: 0px 10px;
+    border-radius: 50px;
+    margin-left: 5%;
+    background: rgb(243, 243, 243);
+}
+
+.elementsContainer {
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
+    
+}
+
+.search {
+    border: none;
+    height: 100%;
+    width: 100%;
+    padding: 0px 5px;
+    border-radius: 50px;
+    font-size: 18px;
+    font-family: "Nunito";
+    color: #424242;
+    font-weight: 500;
+    background: transparent;
+    
+}
+
+.search:focus {
+    outline: none;
+}
+
+.material-symbols-outlined {
+    font-size: 26;
+    color: #0e2238;
+}
+
+.buttonDados {
+    width: 180px;
+    height: 42px;
+    margin-right: 15%;
+    border-radius: 50px;
+    color: white;
+    background-color: #02172e;
+    border: 4px solid #0e2238;
+}
+
+.buttonDados:hover {
+    background-color: #03274e;
+}
