--- a/CSS/login.css
+++ b/CSS/login.css
@@ -14,11 +14,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(12, 11, 11);
+  background-color: #02172e;
   border-radius: 10px;
   width: 355px;
   height: 320px;
   padding: 35px;
+  justify-content: center;
 }
 
 .login form {
@@ -33,35 +34,39 @@ body {
 
 .login input {
   margin-top: 10px;
-  background-color: rgb(175, 170, 170);
+  background-color: #f5f5f5;
   padding-left: 10px;
   border: none;
   height: 45px;
   outline: none;
   border-radius: 8px;
-  color: #e9eaf3;
+  color: black;
+  margin-bottom: 10px;
 }
 
 button {
   margin-top: 10px;
-  background-color: rgb(91, 46, 216);
+  background-color: #274f6e;
   font-size: 18px;
   color: rgb(228, 218, 218);
   border: none;
   height: 45px;
+  width: 60%;
   outline: none;
   border-radius: 8px;
   font-weight: bold;
   text-transform: uppercase;
   display: block;
   cursor: pointer;
+  align-self: center;
 }
-p {
-  color: #e9eaf3;
+button:hover {
+  background-color: #2e5d81;
+
 }
 
 input::placeholder {
-  color: #e9eaf3;
+  color: black;
   font-size: 14px;
 
 }
