--- a/CSS/perfil.css
+++ b/CSS/perfil.css
@@ -178,12 +178,10 @@ a.sidebar-link:hover {
 }
 
 
-
 .boxFullElements {
     display: flex;
     width: 100%;
-    height: 8%;
-    justify-content: space-between;
+    justify-content: space-around
 }
 
 .boxContainer {
@@ -200,66 +198,51 @@ a.sidebar-link:hover {
 .elementsContainer {
     width: 100%;
     height: 100%;
-    vertical-align: middle;  
-}
-
-.search {
-    border: none;
-    height: 100%;
-    width: 100%;
-    padding: 0px 5px;
-    border-radius: 50px;
-    font-size: 18px;
-    font-family: "Nunito";
-    color: #424242;
-    font-weight: 500;
-    background: transparent;
+    vertical-align: middle;
     
 }
-
-.search:focus {
-    outline: none;
+.buttonAprovar {
+  width: 240px;
+  height: 42px;
+  border-radius: 50px;
+  color: white;
+  background-color: #02172e;
+  border: 1px solid #ffffff;
+  margin-top: 20px;
+  margin-right: 150px;
 }
 
-.material-symbols-outlined {
-    font-size: 26;
-    color: #0e2238;
+.buttonAprovar:hover {
+  background-color: #03274e;
+}
+.mb-3 {
+  width: 80%;
 }
 
-.buttonDados {
-    width: 180px;
-    height: 42px;
-    margin-right: 15%;
-    border-radius: 50px;
-    color: white;
-    background-color: #02172e;
-    border: 4px solid #0e2238;
-}
-
-.buttonDados:hover {
-    background-color: #03274e;
-}
 @media (max-width: 750px) {
-.boxFullElements {
+  .mb-3 {
+    margin-bottom: 8rem !important;
+    margin-left: 12px;
+    width: 90%;
+  }
+  .boxFullElements {
     display: flex;
     width: 100%;
-    height: 8%;
-    justify-content: space-between;
     flex-direction: column;
-    align-items: center;
-    }
-    .boxContainer {
-        position: relative;
-        width: 300px;
-        height: 42px;
-        margin-left: 0%;
-        
-    }
-    .buttonDados {
-        width: 180px;
-        height: 42px;
-        margin-right: 0%;
-        margin-top: 20px;
-        
-    }
 }
+.buttonAprovar {
+  width: 240px;
+  height: 42px;
+  border-radius: 50px;
+  color: white;
+  background-color: #02172e;
+  border: 1px solid #ffffff;
+  align-self: center;
+  margin-right: 0;
+}
+.col-md-8 {
+  height: 70%;
+}
+  
+  }
+
