--- a/CSS/perfil.css
+++ b/CSS/perfil.css
@@ -1,205 +1,201 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 
 ::after,
 ::before {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .wrapper {
-    display: flex;
+  display: flex;
 }
 
 .main {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    transition: all 0.35s ease-in-out;
-    background-color: #e7e9ee;
-    min-width: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  transition: all 0.35s ease-in-out;
+  background-color: #e7e9ee;
+  min-width: 0;
 }
 
 #sidebar {
-    width: 70px;
-    min-width: 70px;
-    z-index: 1000;
-    transition: all .25s ease-in-out;
-    background-color: #0e2238;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
+  width: 70px;
+  min-width: 70px;
+  z-index: 1000;
+  transition: all 0.25s ease-in-out;
+  background-color: #0e2238;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
 }
 
 #sidebar.expand {
-    width: 260px;
-    min-width: 260px;
+  width: 260px;
+  min-width: 260px;
 }
 
 .toggle-btn {
-    background-color: transparent;
-    cursor: pointer;
-    border: 0;
-    padding: 1rem 1.5rem;
-    display: block;
+  background-color: transparent;
+  cursor: pointer;
+  border: 0;
+  padding: 1rem 1.5rem;
+  display: block;
 }
 
 .toggle-btn i {
-    font-size: 1.5rem;
-    color: #FFF;
+  font-size: 1.5rem;
+  color: #fff;
 }
 
 .sidebar-logo {
-    margin: auto 0;
+  margin: auto 0;
 }
 
 .sidebar-logo a {
-    color: #FFF;
-    font-size: 1.15rem;
-    font-weight: 600;
+  color: #fff;
+  font-size: 1.15rem;
+  font-weight: 600;
 }
 
 #sidebar:not(.expand) .sidebar-logo,
 #sidebar:not(.expand) a.sidebar-link span {
-    display: none;
+  display: none;
 }
 
 #sidebar.expand .sidebar-logo,
 #sidebar.expand a.sidebar-link span {
-    animation: fadeIn .25s ease;
+  animation: fadeIn 0.25s ease;
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    100% {
-        opacity: 1;
-    }
+  100% {
+    opacity: 1;
+  }
 }
 
 .sidebar-nav {
-    padding: 2rem 0;
-    flex: 1 1 auto;
+  padding: 2rem 0;
+  flex: 1 1 auto;
 }
 
 a.sidebar-link {
-    padding: .625rem 1.625rem;
-    color: #FFF;
-    display: block;
-    font-size: 0.9rem;
-    white-space: nowrap;
-    
+  padding: 0.625rem 1.625rem;
+  color: #fff;
+  display: block;
+  font-size: 0.9rem;
+  white-space: nowrap;
 }
 
 .sidebar-link i,
 .dropdown-item i {
-    font-size: 1.1rem;
-    margin-right: .75rem;
+  font-size: 1.1rem;
+  margin-right: 0.75rem;
 }
 
 a.sidebar-link:hover {
-    background-color: rgba(255, 255, 255, .075);
-    border-left: 3px solid #3b7ddd;
+  background-color: rgba(255, 255, 255, 0.075);
+  border-left: 3px solid #3b7ddd;
 }
 
 .sidebar-item {
-    position: relative;
+  position: relative;
 }
 
 #sidebar:not(.expand) .sidebar-item .sidebar-dropdown {
-    position: absolute;
-    top: 0;
-    left: 70px;
-    background-color: #02172e;
-    padding: 0;
-    min-width: 15rem;
-    display: none;
+  position: absolute;
+  top: 0;
+  left: 70px;
+  background-color: #02172e;
+  padding: 0;
+  min-width: 15rem;
+  display: none;
 }
 
-#sidebar:not(.expand) .sidebar-item:hover .has-dropdown+.sidebar-dropdown {
-    display: block;
-    max-height: 15em;
-    width: 100%;
-    opacity: 1;
+#sidebar:not(.expand) .sidebar-item:hover .has-dropdown + .sidebar-dropdown {
+  display: block;
+  max-height: 15em;
+  width: 100%;
+  opacity: 1;
 }
 
 #sidebar.expand .sidebar-link[data-bs-toggle="collapse"]::after {
-    border: solid;
-    border-width: 0 .075rem .075rem 0;
-    content: "";
-    display: inline-block;
-    padding: 2px;
-    position: absolute;
-    right: 1.5rem;
-    top: 1.4rem;
-    transform: rotate(-135deg);
-    transition: all .2s ease-out;
+  border: solid;
+  border-width: 0 0.075rem 0.075rem 0;
+  content: "";
+  display: inline-block;
+  padding: 2px;
+  position: absolute;
+  right: 1.5rem;
+  top: 1.4rem;
+  transform: rotate(-135deg);
+  transition: all 0.2s ease-out;
 }
 
 #sidebar.expand .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
-    transform: rotate(45deg);
-    transition: all .2s ease-out;
+  transform: rotate(45deg);
+  transition: all 0.2s ease-out;
 }
 
 .navbar {
-    background-color: #e7e9ee;
-    
+  background-color: #e7e9ee;
 }
 
 .navbar-expand .navbar-collapse {
-    min-width: 200px;
+  min-width: 200px;
 }
 .avatar {
-    height: 40px;
-    width: 40px;
+  height: 40px;
+  width: 40px;
 }
 
 .d-flex {
-    display: flex !important;
-    width: 100%;
+  display: flex !important;
+  width: 100%;
 }
 
-
 .boxFullElements {
-    display: flex;
-    width: 100%;
-    justify-content: space-around
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
 
 .boxContainer {
-    position: relative;
-    width: 300px;
-    height: 42px;
-    border: 4px solid #0e2238;
-    padding: 0px 10px;
-    border-radius: 50px;
-    margin-left: 5%;
-    background: rgb(243, 243, 243);
+  position: relative;
+  width: 300px;
+  height: 42px;
+  border: 4px solid #0e2238;
+  padding: 0px 10px;
+  border-radius: 50px;
+  margin-left: 5%;
+  background: rgb(243, 243, 243);
 }
 
 .elementsContainer {
-    width: 100%;
-    height: 100%;
-    vertical-align: middle;
-    
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
 }
 .buttonAprovar {
   width: 240px;
@@ -218,7 +214,27 @@ a.sidebar-link:hover {
 .mb-3 {
   width: 80%;
 }
+.dropdown-menu {
+  min-width: 250px;
+  margin-right: 15%;
+  padding: 6px;
+}
+.dropdow-item-container {
+  padding: 6px;
+  border: 10px;
+}
+.dropdow-item-container:hover {
+  background-color: #b2d5fa;
+  border-radius: 6px;
+}
 
+span {
+  color: #555;
+}
+#icon-elegant {
+  color: #0e2238;
+  margin-right: 5px;
+}
 @media (max-width: 750px) {
   .mb-3 {
     margin-bottom: 8rem !important;
@@ -229,20 +245,18 @@ a.sidebar-link:hover {
     display: flex;
     width: 100%;
     flex-direction: column;
-}
-.buttonAprovar {
-  width: 240px;
-  height: 42px;
-  border-radius: 50px;
-  color: white;
-  background-color: #02172e;
-  border: 1px solid #ffffff;
-  align-self: center;
-  margin-right: 0;
-}
-.col-md-8 {
-  height: 70%;
-}
-  
   }
-
+  .buttonAprovar {
+    width: 240px;
+    height: 42px;
+    border-radius: 50px;
+    color: white;
+    background-color: #02172e;
+    border: 1px solid #ffffff;
+    align-self: center;
+    margin-right: 0;
+  }
+  .col-md-8 {
+    height: 70%;
+  }
+}
