mudanças em geral

--- a/CSS/inaptos.css
+++ b/CSS/inaptos.css
@@ -196,11 +196,11 @@ button {
   border-radius: 6px;
 }
 
-span {
+.span {
   color: #555;
 }
 #icon-elegant {
-  color: #0e2238;
+  color: #0f068b;
   margin-right: 5px;
 }
 
