--- a/CSS/dadoscolaborador.css
+++ b/CSS/dadoscolaborador.css
@@ -6,7 +6,11 @@
   margin: 0;
   padding: 0;
 }
-
+* {
+  border: 0;
+  outline: none;
+  user-select: none;
+}
 a {
   text-decoration: none;
 }
@@ -191,6 +195,11 @@ a.sidebar-link:hover {
   border-radius: 50px;
   margin-left: 5%;
   background: rgb(243, 243, 243);
+  box-shadow: 0 8px 7px -4px rgb(0, 0, 0, 0.2);
+}
+#icon-elegant {
+  color: #0f068b;
+  margin-right: 5px;
 }
 
 .elementsContainer {
@@ -229,10 +238,35 @@ a.sidebar-link:hover {
   color: white;
   background-color: #02172e;
   border: 4px solid #0e2238;
+  display:grid;
+  place-content: center;
+  transition: 0.2s;
+  cursor: pointer;
+  box-shadow: 0 8px 7px -4px rgb(0, 0, 0, 0.2);
 }
 
 .buttonDados:hover {
-  background-color: #03274e;
+  background-color: #053970;
+  border: #03274e;
+}
+
+.loader {
+  pointer-events: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #e7e9ee;
+  animation: an1 1s ease infinite;
+}
+
+@keyframes an1 {
+  0% {
+     transform:  rotate(0turn);
+  }
+  100% {
+    transform: rotate(1turn);
+  }
 }
 
 .dropdown-menu {
@@ -249,7 +283,7 @@ a.sidebar-link:hover {
   border-radius: 6px;
 }
 
-span {
+.span {
   color: #555;
 }
 #icon-elegant {
